--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,21 @@
 </head>
 
 <body>
-    <div class="header-wrap">
+    <div class="is-mobile-header">
+        <div class="container">
+            <div class="is-mobile-header__wrapper">
+                <a href="#" class="header__logo">
+                    <img src="@img/logo.svg" alt="">
+                </a>
+                <div class="mobile-menu-btn" data-burger-menu="">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="header-wrap" data-header-menu>
         <header class="header">
             <div class="header__nameplate-wrapper" data-aos="fade-in">
                 <div class="container">
