--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sitename</title>
+    <title>Гормашвосток</title>
     <link rel="preload" href="./fonts/Ubuntu-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="./fonts/Ubuntu-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="./fonts/Ubuntu-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -361,7 +361,6 @@
                         </a>
                     </div>
                 </div>
-            </div>
             </div>
         </section>
         <section class="info-section">
